fixed sidebar css and overflow in main container

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,6 +17,7 @@
 
 .main-panel#main-container {
     width:100%;
+    overflow-x: hidden;
 }
 .nav-side-menu {
   overflow: auto;
